--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore ModelSim generated files and directories (temp files and so on)
 [_@]*
+work/
 
 # ignore compilation output of ModelSim
 *.mti
@@ -21,3 +22,4 @@ cov*/
 transcript*
 sc_dpiheader.h
 vsim.dbg
+vsim.wlf
